@@ -1,6 +1,9 @@
 2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/s3.c: Fix for x-amz-server-side-encryption
+
+2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/ambsdtar.pl, installcheck/amgtar.pl.
-  installcheck/amstar.pl: Fix for !SINGLE_USERID
+	  installcheck/amstar.pl: Fix for !SINGLE_USERID
 
 2017-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* device-src/s3-device.h (_S3Device): last_byte_read,
